--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
         <script>
             window.__MZAWADIE_CONFIG__ = {
-                API_URL: "https://demo.saleor.io/graphql",
+                API_URL: "https://demo.mzawadie.co.tz/graphql",
                 APP_MOUNT_URI: "/",
                 MARKETPLACE_URL: "",
                 MZAWADIE_APPS_PAGE_PATH: "",
